<resources>
    <string name="app_name">tareaFinal</string>
    <string name="next">Siguiente</string>
    <string name="name">Nombre completo</string>
    <string name="dateBirthDay">Fecha de Nacimiento</string>
    <string name="dateBirthDay2">Fecha de Nacimiento:</string>
    <string name="phone">Teléfono</string>
    <string name="phone2">Teléfono: </string>
    <string name="email">Correo Electrónico</string>
    <string name="email2">Correo Electrónico: </string>
    <string name="description_contact">Descripción contacto </string>
    <string name="description_contact2">Descripción contacto: </string>
    <string name="confirm_data">Confirmar datos</string>
    <string name="simulate_text">Texto simulado</string>
    <string name="edit">Editar</string>
    <string name="name_null">El nombre no puede estar vacío</string>
    <string name="email_null">El E-mail no puede estar vacío</string>
    <string name="phone_null">El Teléfono no puede estar vacío</string>
    <string name="date_null">La fecha de nacimiento estar vacío</string>
    <string name="message_succeess">El contacto fue creado/actualizado exitosamente</string>

</resources>
