<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_app">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etName"
                    android:hint="@string/name"/>


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_calendar_50"
                    android:onClick="datePicker"
                    android:layout_below="@+id/etName"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_marginLeft="@dimen/margin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etName"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dateBirthDay"/>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiltelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etTelefono"
                    android:inputType="phone"
                    android:hint="@string/phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDetail"
                    android:inputType="textMultiLine"
                    android:hint="@string/description_contact"/>

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_below="@+id/ivDatePicker"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:theme="@style/MyRaiseButton"

                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="8dp" />
        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
